# sgaip

./: .gitignore  CHANGELOG.md  COMMIT_CHECKLIST.md  DEVELOPMENT.md  GOVERNANCE.md  PRODUCTION_UPDATES.md  README.md  ROADMAP.md  UPDATE_SUMMARY.md
.github/: FUNDING.yml
cli/: README.md  sgaip_cli.py
docs/: .nojekyll  CNAME  README.md  _config.yml  about.html  index.html  index.md  robots.txt  security-audit-requirements.md  security-guide.md  sitemap.xml  start.html  terminology.md
docs/assets/css/: style.css
python/: README.md
reference/js/: .eslintrc.json  README.md  package.json  tsconfig.json
reference/js/src/: identity.ts  index.test.ts  index.ts  keys.ts  proof.ts
reference/python/: PUBLISH_GUIDE.md  README.md  pyproject.toml
reference/python/examples/: cli_example.sh  library_example.py
reference/python/sgaip/: __init__.py  cli.py  core.py
reference/python/tests/: test_core.py
site/: .gitignore  404.html  README.md  _config.yml  about.html  index.html  resources.html  sitemap.xml  specs.html  start.html
site/_layouts/: default.html
site/assets/css/: style.css
specs/: algorithm-agility.md  identity-derivation.md  key-format.md  post-quantum-analysis.md  proof-protocol.md  sgaip-core.md  threat-model.md  threshold-identities.md  trust-statements.md  zero-knowledge-proofs.md
test-vectors/: sgaip-test-vectors.md
