[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "sgaip"
version = "0.1.3"
description = "Stateless Global Agent Identity Protocol (SGAIP) reference implementation"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "SGAIP Contributors" }]
requires-python = ">=3.10"
dependencies = ["cryptography"]

# PyPI / packaging metadata useful for a preprint release
keywords = ["identity", "cryptography", "sgaip"]
classifiers = [
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.10",
	"Topic :: Security :: Cryptography",
]
maintainers = [ { name = "SGAIP Contributors", email = "sgaip@users.noreply.github.com" } ]


[project.urls]
Homepage = "https://github.com/k-kaundal/sgaip"
Repository = "https://github.com/k-kaundal/sgaip"
Documentation = "https://github.com/k-kaundal/sgaip#readme"
Preprint = "https://example.org/sgaip-preprint"

[project.scripts]
sgaip = "sgaip.cli:main"

[project.optional-dependencies]
dev = [
	"pytest>=7.4",
	"pytest-cov>=4.1",
	"black>=23.12",
	"ruff>=0.1",
	"mypy>=1.7",
]

[tool.setuptools]
packages = ["sgaip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true